<resources>
    <string name="app_name">Calculator</string>
    <string name="nul">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="AC">AC</string>
    <string name="DEL">DEL</string>
    <string name="PROC">%</string>
    <string name="DIL">/</string>
    <string name="DORIV">=</string>
    <string name="MNOJ">*</string>
    <string name="MIN">-</string>
    <string name="PLUS">+</string>
    <string name="rightd">(</string>
    <string name="leftd">)</string>
    <string name="tok">.</string>

</resources>